# practice

./: README.md
phase-1/: README.md  main.py  pyproject.toml  tests.py
phase-2/: .gitignore  CHECKLIST.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TESTING.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
phase-2/blog/: admin.py  api.py  apps.py  models.py  schemas.py  tests.py
phase-2/blog/migrations/: 0001_initial.py
phase-2/blog/tests/: api_tests.py  model_tests.py  sdk_tests.py
phase-2/config/: settings.py  urls.py  wsgi.py
